Issue#SB-22562 changes in my-discussion cards,post reply cards in alignment for mobile and replace name css to scss in components

--- a/projects/discussion-ui/assets/styles/global.scss
+++ b/projects/discussion-ui/assets/styles/global.scss
@@ -1,63 +1,32 @@
-.profileCard{
-    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-    background: #fff;
-    color: rgba(0,0,0,.87);
-    flex: 1;
-    height: auto;
-    margin-bottom: 24px;
-    transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
-    display: block;
-    position: relative;
-    padding: 24px;
-    border-radius: 4px;
-    width: 100%;
+.background-blue{
+    background-color: blueviolet;
 }
-.profilecard-content{
-    display: flex;
-}
-.profile-header-image{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border-radius: 4px;
-    max-width: 152px;
-    height: 125px;
-    border: 1px solid #ddd;
-    margin-right: 24px;
-    background: green;
-    text-align: center;
-}
-.name-label{
-    color: rgba(0,0,0,.54);
-    font-size: 16px;
-    margin: 16px 0;
-    font-size: 16px;
-    font-weight: 700;
-}
-.email,.location,.department{
-    color: rgba(0,0,0,.54);
-    font-size: 14px;
-    margin: 16px 0;  
-}
-.post-count-area{
-    margin-left:32px;
-}
-.labels{
-    color: rgba(0,0,0,.87);
-    font-weight: bold;
+
+:root {
     font-size: 16px;
 }
-.number{
-    color: #0074b6;
-    margin-right: 16px;
-    font-size: 16px;   
-}
+
+//rem calculator
+@function calculateRem($size) {
+    $remSize: $size / 16px;
+    @return #{$remSize}rem;
+  }
+  
+  @function calculateEm($size) {
+    $emSize: $size / 16px;
+    @return #{$emSize}em;
+  }
+  
+  @mixin fontSize($size) {
+    font-size: $size; //Fallback in px
+    font-size: calculateRem($size);
+  }
+
+  
 .recent-tabs{
     transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
     display: block;
     position: relative;
-    padding: 16px 0;
     box-shadow: none!important;
     border-radius: unset;
     background: inherit!important; 
@@ -73,7 +42,8 @@
     flex-wrap: wrap;
 }
 .filter-option{
-    margin: 12px;
+    margin: 8px;
+    text-decoration: none;
     border: 1px solid #ddd;
     border-width: 0 0 2px;
     -webkit-user-select: none;
@@ -90,9 +60,9 @@
     text-align: center;
     min-width: 64px;
     line-height: 40px;
-    padding: 0 16px;
+    padding: 0 4px;
     overflow: visible;
-    font-size: 16px;
+    font-size: 14px;
     color: #000;
 }
 .filter-option:first-child {
@@ -109,30 +79,54 @@
     color: rgba(0,0,0,.87);
     flex: 1;
     height: auto;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
     transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
     display: block;
     position: relative;
-    padding: 24px;
+    padding: 1.4rem;
     border-radius: 4px;
     width: 100%;
 }
-.no-data-label{
-    font-size: 20px;
-    font-weight: bold;
+
+.tags{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    flex-wrap: wrap; 
+}
+
+.tag {
+    font-size: 12px;
+    display: flex;
+    width: auto;
+    min-width: max-content;
+    height: 32px;
+    justify-content: space-between;
+    margin-right: 16px;
+    align-items: center;
+    text-transform: lowercase;
+    padding: 8px 16px;
+    border-radius: 24px 8px 8px 24px;
+    margin-bottom: 8px;
+}
+
+.count {
+    height: auto;
+    background: #fff;
+    border-radius: 4px;
+    padding: 1px 3px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    min-width: 16px;
+    margin: 0 0 0 15px;
+    color: #0074b6;
+    font: 700 14px/21px Lato;
 }
 
 @media (max-width: 768px) {
-    .profileCard{
-        width: auto;
-    }
     .discuss-card-content{
         width: auto;
     }
-}
-
-.box-text{
-    font-size: 4rem;
-    color: white;
-    text-transform: uppercase;
 }
